# loopx

./: CONTRIBUTOR_TASKS.md  README.md
docs/: architecture.md  attention-queue.md  codex-cli-long-run-benchmark-design.md  complex-project-readonly-adapter.md  dashboard-frontend-selection.md  dashboard-reward-write-boundary.md  dreaming-exploration-lane.md  experiment-controller-milestone.md  field-derived-patterns.md  frontstage-channel-lease-roadmap.md  heartbeat-automation-prompt.md  integration.md  interaction-pattern-catalog.md  lark-kanban-control-plane-adapter.md  new-project-codex-prompt.md  project-agent-todo-contract.md  public-private-boundary.md  quota-allocation.md  session-runtime-control-plane-adapter.md  state-interaction-model.md  status-data-contract.md  xiaohongshu-launch-draft.md
examples/: active-state-todo-attention-fallback-smoke.py  agents-last-exam-local-launch-packet-smoke.py  auto-research-demo-e2e-worker-loop-smoke.py  auto-research-demo-supervisor-smoke.py  benchmark-claim-review-smoke.py  install-local-smoke.py  (+50 more)
extensions/loopx-futu-paper-trade/: README.md  extension.toml  pyproject.toml
extensions/loopx-futu-paper-trade/examples/: order.json
extensions/loopx-futu-paper-trade/src/loopx_futu_paper_trade/: cli.py  contract.py  provider.py
extensions/loopx-futu-paper-trade/tests/: test_provider.py
extensions/loopx-market-judgment/: README.md  extension.toml  pyproject.toml
extensions/loopx-market-judgment/examples/: a-share-turn-window.json
extensions/loopx-market-judgment/src/loopx_market_judgment/: __init__.py  cli.py  reducer.py
(+124 files in other folders)
