[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "loopx-futu-paper-trade"
version = "0.1.0"
description = "Futu OpenD simulated-trading extension for LoopX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["futu-api==10.9.6908"]

[project.scripts]
loopx-futu-paper-trade = "loopx_futu_paper_trade.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
